# arches-catalog

./: .gitignore  MAINTAINING.md  PLAN.md  README.md  pyproject.toml  schema.json
.github/: CODEOWNERS
.github/workflows/: build-site.yml  validate-pr.yml
scripts/: enrich.py
site/: eleventy.config.js  package-lock.json  package.json
site/src/: index.html
site/src/_layouts/: base.html
site/src/css/: main.css
