[project]
name = "arches-catalog"
readme = "README.md"
authors = [
    {name = "Arches Project"}
]
description = "Arches community catalog site"
version = "1.0.0"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
keywords = ["arches", "cultural heritage"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
    "pyyaml",
    "check-jsonschema",
]